cabal-version:      3.0
name:               haskell2015
version:            0.1.0.0
author:             Kevin de Berk
maintainer:         kevin@dberk.nl
build-type:         Simple

common warnings
    ghc-options: -Wall -Wno-name-shadowing -Wno-incomplete-patterns

executable haskell2015
    import:           warnings
    main-is:          Main.hs
    other-modules:    Day1 Day2 Day3 Day4 Day5 Shared
    -- other-extensions:
    build-depends:
        base ^>=4.17.0.0,
        base16-bytestring ^>=1,
        bytestring ^>=0.11,
        containers ^>=0.6,
        cryptohash-md5 ^>=0.11,
    hs-source-dirs:   app
    default-language: Haskell2010
